Add watch tasks and browserify support

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,8 +1,8 @@
 @import "components/button"
 
 .hello-world
-  background: red
-  color: white
+  background: blue
+  color: black
 
   animation: some-animation
 
